<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.SettingsFragment">

    <Switch
        android:id="@+id/switch_push"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/getpushnotif2"
        android:minHeight="48dp"
        android:text="@string/switchpush"
        android:textColor="@color/green"
        android:textColorHighlight="@color/green"
        android:textColorLink="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getpushnotif2"
        app:layout_constraintStart_toStartOf="@+id/switch_push"
        app:layout_constraintTop_toBottomOf="@+id/switch_push" />

    <TextView
        android:id="@+id/text_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/exit"
        android:textColor="#A13030"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/switch_push"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>